<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.atolcd.gis</groupId>
  <artifactId>shp</artifactId>
  <version>1.1</version>
  <packaging>jar</packaging>

  <name>AtolCD shp</name>
  <description>AtolCD shp</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <spotless.version>2.43.0</spotless.version>
  </properties>

  <build>
    <defaultGoal>package</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <!-- Code formatting (eg: check or apply) -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>1.22.0</version>
            </googleJavaFormat>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <!-- Local repository -->
    <repository>
      <id>local-maven-repo</id>
      <name>Local Maven Repo</name>
      <url>file://${project.basedir}/../local-maven-repo</url>
    </repository>
    <repository>
      <id>52north.org-releases</id>
      <name>52north.org-releases</name>
      <url>https://52north.org/maven/repo/releases/</url>
    </repository>
    <repository>
      <id>datanucleus</id>
      <name>datanucleus</name>
      <url>https://www.datanucleus.org/downloads/maven2/</url>
    </repository>
    <repository>
      <id>jboss.org</id>
      <name>jboss.org</name>
      <url>https://repository.jboss.org</url>
    </repository>
    <repository>
      <id>maven-us.nuxeo.org</id>
      <name>maven-us.nuxeo.org</name>
      <url>https://maven-us.nuxeo.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>axiomalaska</id>
      <name>axiomalaska</name>
      <url>https://nexus.axiomalaska.com/nexus/content/groups/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.locationtech.jts</groupId>
      <artifactId>jts-core</artifactId>
      <version>1.20.0</version>
    </dependency>
  </dependencies>

  <organization>
    <name>Atol CD</name>
    <url>https://www.atolcd.com</url>
  </organization>
</project>